force-app/main/default/objects/gaid__GiftAid_Tax_Rates__mdt/gaid__GiftAid_Tax_Rates__mdt.object-meta.xml
<CustomObject>
    <label>GiftAid Tax Rate</label>
    <pluralLabel>Gift Aid Tax Rates</pluralLabel>
</CustomObject>