force-app/main/default/objects/gaid__GiftAid_Tax_Rates__mdt/fields/gaid__Basic_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>gaid__Basic_Tax_Rate__c</fullName>
    <label>Basic Tax Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>