force-app/main/default/objects/gaid__GiftAid_Tax_Rates__mdt/fields/gaid__Donation_Increase__c.field-meta.xml
<CustomField>
    <fullName>gaid__Donation_Increase__c</fullName>
    <label>Donation Increase</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>